hphp/test/zend/good/ext/standard/tests/general_functions/bug60227_1.php.expectf

Fatal error: Header may not contain more than a single header, new line detected in %s/bug60227_1.php on line 6
